tests/rosetta/out/Java/active-directory-search-for-a-user.error
javac error: exit status 1
/tmp/TestMochiToJavaactive-directory-search-for-a-user1439642049/001/ActiveDirectorySearchForAUser.java:10: error: cannot find symbol
        BaseHostPortGroupFilter client = new BaseHostPortGroupFilter("dc=example,dc=com", "ldap.example.com", 389, "(memberUid=%s)");
        ^
  symbol:   class BaseHostPortGroupFilter
  location: class ActiveDirectorySearchForAUser
/tmp/TestMochiToJavaactive-directory-search-for-a-user1439642049/001/ActiveDirectorySearchForAUser.java:10: error: cannot find symbol
        BaseHostPortGroupFilter client = new BaseHostPortGroupFilter("dc=example,dc=com", "ldap.example.com", 389, "(memberUid=%s)");
                                             ^
  symbol:   class BaseHostPortGroupFilter
  location: class ActiveDirectorySearchForAUser
/tmp/TestMochiToJavaactive-directory-search-for-a-user1439642049/001/ActiveDirectorySearchForAUser.java:11: error: cannot find symbol
        UsernameJohn directory = new UsernameJohn(Arrays.asList("admins", "users"), Arrays.asList("users"));
        ^
  symbol:   class UsernameJohn
  location: class ActiveDirectorySearchForAUser
/tmp/TestMochiToJavaactive-directory-search-for-a-user1439642049/001/ActiveDirectorySearchForAUser.java:11: error: cannot find symbol
        UsernameJohn directory = new UsernameJohn(Arrays.asList("admins", "users"), Arrays.asList("users"));
                                     ^
  symbol:   class UsernameJohn
  location: class ActiveDirectorySearchForAUser
/tmp/TestMochiToJavaactive-directory-search-for-a-user1439642049/001/ActiveDirectorySearchForAUser.java:17: error: incompatible types: String cannot be converted to Number
                out = ((Number)out + "\"" + ((Number)groups.get(i)).doubleValue()).doubleValue() + "\"";
                               ^
/tmp/TestMochiToJavaactive-directory-search-for-a-user1439642049/001/ActiveDirectorySearchForAUser.java:17: error: incompatible types: String cannot be converted to Number
                out = ((Number)out + "\"" + ((Number)groups.get(i)).doubleValue()).doubleValue() + "\"";
                                                               ^
6 errors
