tests/rosetta/out/Java/active-directory-search-for-a-user.java
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:09:33Z
// active-directory-search-for-a-user.mochi
import java.util.*;

public class ActiveDirectorySearchForAUser {
    static List<String> search_user(Map<String,List<String>> directory, String username) {
        return directory.get(username);
    }
    static void main() {
        BaseHostPortGroupFilter client = new BaseHostPortGroupFilter("dc=example,dc=com", "ldap.example.com", 389, "(memberUid=%s)");
        UsernameJohn directory = new UsernameJohn(Arrays.asList("admins", "users"), Arrays.asList("users"));
        List<String> groups = search_user(directory, "username");
        if (groups.size() > 0) {
            String out = "Groups: [";
            int i = 0;
            while (i < groups.size()) {
                out = ((Number)out + "\"" + ((Number)groups.get(i)).doubleValue()).doubleValue() + "\"";
                if (i < groups.size() - 1) {
                    out = out + ", ";
                }
                i = (int)(i + 1);
            }
            out = out + "]";
            System.out.println(out);
        }
        else {
            System.out.println("User not found");
        }
    }
    public static void main(String[] args) {
    main();
    }
}
